made new changes that i like much better, need to fix the font, logo image size, a link still, video size, 3d model position in smaller screens, images fixed in the card to fit with the text, font size fixed for h2 in the cards on mobile, and please a new font

--- a/src/App.css
+++ b/src/App.css
@@ -119,8 +119,6 @@ h2 {
   margin-top: 40rem; /* Adds space between video and cards */
   z-index: -1; /* Ensure cards are above the video */
   padding: 2rem; /* Extra padding to ensure it's clear of the video */
-  border: 3px solid rgb(167, 75, 1);
-  background-color: rgb(167, 75, 1);
   border-radius: 30px;
   color: black;
   position: absolute;
